# ellmos-homebase-mcp

./: .gitignore  .npmignore  CHANGELOG.md  KONZEPT.md  README.md  README_de.md  TODO.md  glama.json  llms.txt  package-lock.json  package.json  pyproject.toml  server.json
.github/workflows/: tests.yml
artwork/originals/: README.md
config/: homebase.example.toml
src/homebase/: __init__.py  config.py  engines.py  i18n.py  registry.py  server.py  storage.py
src/homebase/modules/: __init__.py  api.py  automation.py  connectors.py  garden.py  knowledge.py  memory.py  plugins.py  routing.py  state.py  swarm.py  testing.py
tests/: test_config.py  test_engine_seams.py  test_i18n_completeness.py  test_metadata.py  test_registry.py  test_repository_hygiene.py
